[tool.poetry]
name = "python3-eventbus"
version = "0.1.4"
description = "Event bus implementation for Python"
authors = ["Álvaro Torres Cogollo <atorrescogollo@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["eventbus", "event", "bus", "python"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
packages = [
    { include = "pyeventbus" }
]
exclude = [
    "pyeventbus/**/tests/*",
    "pyeventbus/**/test_*.py",
]

[tool.poetry.urls]
"Issues" = "https://github.com/atorrescogollo/pyeventbus/issues"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = {version = "^1.34.7", extras = ["sns"]}

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.342"
pylint = "^3.0.3"
pytest = "^7.4.3"
black = "^23.12.1"
boto3-stubs = {extras = ["all"], version = "^1.34.7"}
moto = "^4.2.12"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.tz.tz.*",
    "ignore::DeprecationWarning:botocore.auth.*",
]
